--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_DB=md-backend
-POSTGRES_PASSWORD=root
+POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
